[soa] feat: server
